--- a/ivy.xml
+++ b/ivy.xml
@@ -24,6 +24,7 @@
 		<dependency org="org.springframework" name="spring-web" rev="4.1.3.RELEASE" conf="default"/>
 		<dependency org="org.springframework" name="spring-webmvc" rev="4.1.3.RELEASE" conf="default"/>
 		
+		<dependency org="org.hsqldb" name="hsqldb" rev="2.3.1" />
 		<dependency org="opensymphony" name="sitemesh" rev="2.4.2" conf="default" />
 		<dependency org="javax.servlet" name="jstl" rev="1.2" conf="default" />
 		<dependency org="org.hibernate" name="hibernate-entitymanager" rev="4.3.7.Final" conf="default" />
