--- a/ivy.xml
+++ b/ivy.xml
@@ -1,7 +1,7 @@
 <ivy-module version="2.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
-	<info organisation="converromanos" module="converromanos" />
+	<info organisation="meubolso" module="meubolso" />
 
 	<configurations>
 		<conf name="default" description="dependencies used for compile" />
@@ -24,7 +24,7 @@
 		<dependency org="org.springframework" name="spring-web" rev="4.1.3.RELEASE" conf="default"/>
 		<dependency org="org.springframework" name="spring-webmvc" rev="4.1.3.RELEASE" conf="default"/>
 		
-		<dependency org="org.hsqldb" name="hsqldb" rev="2.3.1" />
+		<dependency org="org.hsqldb" name="hsqldb" rev="2.3.1" conf="default"/>
 		<dependency org="opensymphony" name="sitemesh" rev="2.4.2" conf="default" />
 		<dependency org="javax.servlet" name="jstl" rev="1.2" conf="default" />
 		<dependency org="org.hibernate" name="hibernate-entitymanager" rev="4.3.7.Final" conf="default" />
