--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,7 @@
 		</path>
 		<taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path" />
 
-		<ivy:retrieve pattern="lib/[conf]/[artifact]-[revision].[ext]" sync="true" />
+		<ivy:retrieve pattern="lib/[conf]/[artifact]-[type]-[revision].[ext]" sync="true" />
 		<delete dir="${lib.dir}" includes="**/*.*" />
 		<copy todir="${lib.dir}">
 			<fileset dir="lib/default">
