--- a/ivy.xml
+++ b/ivy.xml
@@ -34,7 +34,7 @@
 		<dependency org="org.jadira.usertype" name="usertype.core" rev="3.2.0.GA" conf="default">
 			<exclude module="hibernate-core"/>
 		</dependency>
-		<dependency org="joda-time" name="joda-time-hibernate" rev="1.4"/>
+		<dependency org="joda-time" name="joda-time-hibernate" rev="1.4" conf="default"/>
 
 		<!-- Provided dependencies -->
 		<dependency org="javax.servlet" name="javax.servlet-api" rev="3.1.0" conf="provided->default" />
