--- a/.classpath
+++ b/.classpath
@@ -10,92 +10,161 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/ant-jar-1.6.5.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/antlr-jar-2.7.6.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/asm-jar-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/cglib-jar-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/cglib-nodep-jar-2.1_3.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/commons-codec-jar-1.9.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/commons-collections-jar-3.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/commons-exec-jar-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/commons-io-jar-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/commons-lang3-jar-3.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/commons-logging-jar-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/cssparser-jar-0.9.14.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/dom4j-jar-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/gson-jar-2.3.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/guava-bundle-18.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/hibernate-commons-annotations-jar-3.2.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/hibernate-core-jar-3.6.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/hibernate-entitymanager-jar-3.6.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/hibernate-jpa-2.0-api-jar-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/htmlunit-core-js-jar-2.15.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/htmlunit-jar-2.15.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/httpclient-jar-4.3.4.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/httpcore-jar-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/httpmime-jar-4.3.3.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/javassist-jar-3.12.0.GA.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/jboss-jacc-api_JDK4-jar-1.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/jetty-http-jar-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/jetty-io-jar-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/jetty-util-jar-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/jetty-websocket-jar-8.1.15.v20140411.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/jna-jar-3.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/joda-time-hibernate-jar-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/joda-time-hibernate-javadoc-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/joda-time-hibernate-source-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/joda-time-jar-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/jta-jar-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/nekohtml-jar-1.9.21.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/netty-bundle-3.5.2.Final.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/platform-jar-3.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/sac-jar-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/selenium-api-jar-2.44.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/selenium-chrome-driver-jar-2.44.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/selenium-firefox-driver-jar-2.44.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/selenium-htmlunit-driver-jar-2.44.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/selenium-ie-driver-jar-2.44.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/selenium-java-jar-2.44.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/selenium-remote-driver-jar-2.44.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/selenium-safari-driver-jar-2.44.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/selenium-support-jar-2.44.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/serializer-jar-2.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/slf4j-api-jar-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/validation-api-jar-1.0.0.GA.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/webbit-jar-0.4.14.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/xalan-jar-2.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/xercesImpl-jar-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/acceptance-test/xml-apis-jar-1.4.01.jar"/>
 	<classpathentry kind="lib" path="lib/default/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/default/antlr-jar-2.7.7.jar"/>
 	<classpathentry kind="lib" path="lib/default/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/default/aopalliance-jar-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/default/cdi-api-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/default/cdi-api-jar-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/default/classmate-1.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/default/classmate-bundle-1.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/default/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/default/commons-logging-jar-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/default/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/default/dom4j-jar-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/default/guava-13.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/default/guava-jar-13.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/default/hibernate-commons-annotations-4.0.5.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/hibernate-commons-annotations-jar-4.0.5.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/hibernate-core-4.3.7.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/hibernate-core-jar-4.3.7.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/hibernate-entitymanager-4.3.7.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/hibernate-entitymanager-jar-4.3.7.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/hibernate-jpa-2.1-api-jar-1.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/hibernate-validator-5.1.3.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/hibernate-validator-cdi-5.1.3.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/hibernate-validator-cdi-jar-5.1.3.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/hibernate-validator-jar-5.1.3.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/hsqldb-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/default/hsqldb-jar-2.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/default/jandex-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/jandex-jar-1.1.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="lib/default/javassist-bundle-3.18.1-GA.jar"/>
 	<classpathentry kind="lib" path="lib/default/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="lib/default/javax.inject-jar-1.jar"/>
 	<classpathentry kind="lib" path="lib/default/jboss-annotations-api_1.2_spec-1.0.0.Alpha1.jar"/>
+	<classpathentry kind="lib" path="lib/default/jboss-annotations-api_1.2_spec-jar-1.0.0.Alpha1.jar"/>
 	<classpathentry kind="lib" path="lib/default/jboss-classfilewriter-1.0.4.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/jboss-classfilewriter-jar-1.0.4.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/jboss-el-api_3.0_spec-1.0.0.Alpha1.jar"/>
+	<classpathentry kind="lib" path="lib/default/jboss-el-api_3.0_spec-jar-1.0.0.Alpha1.jar"/>
 	<classpathentry kind="lib" path="lib/default/jboss-interceptors-api_1.2_spec-1.0.0.Alpha3.jar"/>
+	<classpathentry kind="lib" path="lib/default/jboss-interceptors-api_1.2_spec-jar-1.0.0.Alpha3.jar"/>
 	<classpathentry kind="lib" path="lib/default/jboss-logging-3.1.3.GA.jar"/>
 	<classpathentry kind="lib" path="lib/default/jboss-logging-annotations-1.2.0.Beta1.jar"/>
+	<classpathentry kind="lib" path="lib/default/jboss-logging-annotations-jar-1.2.0.Beta1.jar"/>
+	<classpathentry kind="lib" path="lib/default/jboss-logging-jar-3.1.3.GA.jar"/>
 	<classpathentry kind="lib" path="lib/default/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/jboss-transaction-api_1.2_spec-jar-1.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/joda-time-2.6.jar"/>
+	<classpathentry kind="lib" path="lib/default/joda-time-hibernate-jar-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/default/joda-time-hibernate-javadoc-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/default/joda-time-hibernate-source-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/default/joda-time-jar-2.6.jar"/>
 	<classpathentry kind="lib" path="lib/default/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/default/jstl-jar-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/default/junit-4.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/default/junit-jar-4.8.1.jar"/>
 	<classpathentry kind="lib" path="lib/default/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/default/log4j-bundle-1.2.17.jar"/>
 	<classpathentry kind="lib" path="lib/default/logback-classic-1.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/default/logback-classic-jar-1.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/default/logback-core-1.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/default/logback-core-jar-1.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/default/sitemesh-2.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/default/sitemesh-jar-2.4.2.jar"/>
 	<classpathentry kind="lib" path="lib/default/slf4j-api-1.7.9.jar"/>
+	<classpathentry kind="lib" path="lib/default/slf4j-api-jar-1.7.9.jar"/>
 	<classpathentry kind="lib" path="lib/default/slf4j-log4j12-1.7.9.jar"/>
+	<classpathentry kind="lib" path="lib/default/slf4j-log4j12-jar-1.7.9.jar"/>
 	<classpathentry kind="lib" path="lib/default/spring-aop-4.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/default/spring-aop-jar-4.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/default/spring-beans-4.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/default/spring-beans-jar-4.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/default/spring-context-4.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/default/spring-context-jar-4.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/default/spring-core-4.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/default/spring-core-jar-4.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/default/spring-expression-4.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/default/spring-expression-jar-4.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/default/spring-web-4.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/default/spring-web-jar-4.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/default/spring-webmvc-4.1.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/default/spring-webmvc-jar-4.1.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/default/usertype.core-3.2.0.GA.jar"/>
+	<classpathentry kind="lib" path="lib/default/usertype.core-jar-3.2.0.GA.jar"/>
 	<classpathentry kind="lib" path="lib/default/usertype.spi-3.2.0.GA.jar"/>
+	<classpathentry kind="lib" path="lib/default/usertype.spi-jar-3.2.0.GA.jar"/>
 	<classpathentry kind="lib" path="lib/default/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/validation-api-jar-1.1.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/weld-api-2.1.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/weld-api-jar-2.1.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/weld-core-impl-2.1.2.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/weld-core-impl-jar-2.1.2.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/weld-servlet-core-2.1.2.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/weld-servlet-core-jar-2.1.2.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/weld-spi-2.1.Final.jar"/>
+	<classpathentry kind="lib" path="lib/default/weld-spi-jar-2.1.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/xml-apis-1.0.b2.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/cglib-nodep-2.1_3.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/commons-exec-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/commons-lang3-3.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/cssparser-0.9.14.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/gson-2.3.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/guava-18.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/htmlunit-2.15.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/htmlunit-core-js-2.15.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/httpclient-4.3.4.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/httpcore-4.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/httpmime-4.3.3.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/jetty-http-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/jetty-io-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/jetty-util-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/jetty-websocket-8.1.15.v20140411.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/jna-3.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/nekohtml-1.9.21.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/netty-3.5.2.Final.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/platform-3.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/sac-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/selenium-api-2.44.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/selenium-chrome-driver-2.44.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/selenium-firefox-driver-2.44.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/selenium-htmlunit-driver-2.44.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/selenium-ie-driver-2.44.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/selenium-java-2.44.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/selenium-remote-driver-2.44.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/selenium-safari-driver-2.44.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/selenium-support-2.44.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/serializer-2.7.1.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/webbit-0.4.14.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/xalan-2.7.1.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/xercesImpl-2.11.0.jar"/>
-	<classpathentry kind="lib" path="lib/acceptance-test/xml-apis-1.4.01.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/default/xml-apis-jar-1.0.b2.jar"/>
 	<classpathentry kind="output" path="src/main/webapp/WEB-INF/classes"/>
 </classpath>
