--- a/.classpath
+++ b/.classpath
@@ -118,5 +118,6 @@
 	<classpathentry kind="lib" path="lib/default/weld-servlet-core-jar-2.1.2.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/weld-spi-jar-2.1.Final.jar"/>
 	<classpathentry kind="lib" path="lib/default/xml-apis-jar-1.0.b2.jar"/>
+	<classpathentry kind="lib" path="lib/test/mockito-all-jar-1.8.5.jar"/>
 	<classpathentry kind="output" path="src/main/webapp/WEB-INF/classes"/>
 </classpath>
